--- a/huawei_prototype/geomap/templates/geomap/incident_map.html
+++ b/huawei_prototype/geomap/templates/geomap/incident_map.html
@@ -23,11 +23,16 @@
             </div>
         </div>
     </div>
-    <div class="map-container" style="height: 600px;">
-        {{ map|safe }}
+    <!-- Constrain the map and ensure content flows properly -->
+    <div class="map-container" style="height: 600px; position: relative; overflow: hidden;">
+        <div style="width: 100%; height: 100%;">
+            {{ map_html|safe }}
+        </div>
     </div>
-    <div class="mt-3">
-        <a href="{% url 'index' %}" class="btn btn-secondary">Back to Dashboard</a>
+    
+    <!-- Fixed button positioning -->
+    <div class="mt-4 mb-5" style="position: relative; clear: both;">
+        <a href="{% url 'geomap' %}" class="btn btn-secondary">Back to Map Home Page</a>
     </div>
 </div>
 {% endblock %}
