--- a/huawei_prototype/templates/base.html
+++ b/huawei_prototype/templates/base.html
@@ -22,21 +22,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link {% if active_page == 'index' %}active{% endif %}" href="{% url 'index' %}">
-                            Home
-                        </a>
+                        <a class="nav-link {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if active_page == 'realtime_map' %}active{% endif %}" href="{% url 'realtime_map' %}">
-                            Real-Time Incidents
-                        </a>
+                        <a class="nav-link {% if request.path|slice:":8" == '/geomap/' %}active{% endif %}" href="{% url 'geomap' %}">Maps</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link {% if active_page == 'prediction_heatmap' %}active{% endif %}" href="{% url 'prediction_heatmap' %}">
-                            Prediction Heatmap
-                        </a>
+                        <a class="nav-link {% if request.path|slice:":9" == '/cameras/' %}active{% endif %}" href="{% url 'cameras' %}">List of Cameras</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path|slice:":15" == '/notifications/' %}active{% endif %}" href="{% url 'notifications' %}">Notifications/Alerts</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path|slice:":9" == '/archive/' %}active{% endif %}" href="{% url 'archive' %}">Archive</a>
                     </li>
                 </ul>
+                <div class="ms-auto">
+                    {# <a href="{% url 'authentication/logout' %}" class="btn btn-outline-light">Logout</a> #}
+                    <a class="btn btn-outline-light">Logout</a>
+                </div>
             </div>
         </div>
     </nav>
