--- a/huawei_prototype/templates/base.html
+++ b/huawei_prototype/templates/base.html
@@ -21,9 +21,16 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    {% comment %} <li class="nav-item">
                         <a class="nav-link {% if request.path == '/dashboard/' %}active{% endif %}" href="{% url 'dashboard' %}">Dashboard</a>
+                    </li> {% endcomment %}
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.path == '/' %}active{% endif %}"
+                            href="{% url 'dashboard' %}">
+                            Dashboard
+                        </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link {% if request.path|slice:":8" == '/geomap/' %}active{% endif %}" href="{% url 'geomap' %}">Maps</a>
                     </li>
@@ -38,8 +45,7 @@
                     </li>
                 </ul>
                 <div class="ms-auto">
-                    {# <a href="{% url 'authentication/logout' %}" class="btn btn-outline-light">Logout</a> #}
-                    <a class="btn btn-outline-light">Logout</a>
+                    <a href="{% url 'logout' %}" class="btn btn-outline-light">Logout</a>
                 </div>
             </div>
         </div>
