--- a/huawei_prototype/dashboard/templates/dashboard/dashboard.html
+++ b/huawei_prototype/dashboard/templates/dashboard/dashboard.html
@@ -39,7 +39,7 @@
     <div class="col-md-4">
       <div class="card border-info h-100">
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-info">Low Risk</h6>
+          <h6 class="card-subtitle mb-2 text-info">Low Severity</h6>
           <p class="h2">{{ low_risk_count }}</p>
         </div>
       </div>
@@ -47,7 +47,7 @@
     <div class="col-md-4">
       <div class="card border-warning h-100">
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-warning">Moderate Risk</h6>
+          <h6 class="card-subtitle mb-2 text-warning">Moderate Severity</h6>
           <p class="h2">{{ moderate_risk_count }}</p>
         </div>
       </div>
@@ -55,7 +55,7 @@
     <div class="col-md-4">
       <div class="card border-danger h-100">
         <div class="card-body">
-          <h6 class="card-subtitle mb-2 text-danger">High Risk</h6>
+          <h6 class="card-subtitle mb-2 text-danger">High Severity</h6>
           <p class="h2">{{ high_risk_count }}</p>
         </div>
       </div>
