--- a/huawei_prototype/templates/base.html
+++ b/huawei_prototype/templates/base.html
@@ -7,8 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        html, body {
+            height: 100%;
+        }
         body {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
             padding-top: 56px;
+        }
+        .main-content {
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: column;
+            min-height: 0;
+            min-width: 0;
         }
     </style>
 </head>
@@ -51,7 +64,7 @@
         </div>
     </nav>
 
-    <div class="container mt-4 pt-3">
+    <div class="main-content">
         {% block content %}
         {% endblock %}
     </div>
